students/VashchukAnatoliy/task_02/src/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: micro-twitter
  labels:
    name: micro-twitter
    environment: production
