students/VashchukAnatoliy/task_02/src/k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: micro-twitter
  labels:
    app: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
